<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/Destination_txtView_destinationName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/Destination_btn_destination"
        android:layout_alignStart="@id/Destination_btn_destination"
        android:text="@string/Destination_txt_information" />

    <Button
        android:id="@+id/Destination_btn_destination"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Destination_btn_randomize"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"/>

    <Button
        android:id="@+id/Destination_btn_bookride"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/Destination_btn_destination"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/Destination_btn_bookRide" />

</RelativeLayout>