<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RideShare">

    <Button
        android:id="@+id/RideShare_btn_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/RideShare_btn_confirm"
        tools:layout_editor_absoluteX="145dp"
        tools:layout_editor_absoluteY="458dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"/>

    <Button
        android:id="@+id/RideShare_btn_deny"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/RideShare_btn_deny"
        tools:layout_editor_absoluteX="145dp"
        tools:layout_editor_absoluteY="458dp"
        android:layout_marginLeft="50dp"
        android:layout_alignLeft="@id/RideShare_btn_confirm"
        android:layout_centerVertical="true"/>

    <TextView
        android:id="@+id/RideShare_text_textFill"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/RideShare_btn_text" />
</RelativeLayout>